<resources>
    <string name="app_name">Lets Cook</string>
    <string name="sign_up">Bạn chưa có tài khoản? Tạo tài khoản tại đây</string>
    <string name="log_in">Đăng nhập</string>
    <string name="sign_in">Đăng ký</string>
    <string name="input_username">Email</string>
    <string name="input_password">Mật khẩu</string>
    <string name="sign_up2">Tạo tài khoản</string>
    <string name="input_password2">Nhập lại mật khẩu</string>
    <string name="facebook_app_id">543602266559327</string>
    <string name="fb_login_protocol_scheme">fb543602266559327</string>
    <string name="create">Tạo tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="return_">Quay lại trang đăng nhập</string>
    <string name="search_dish">Tìm ngay món ngon</string>
    <string name="post_saved">Các bài đã lưu</string>
    <string name="dish_content">Món ngon hôm nay</string>
    <string name="recipe_from">Công thức từ Let Cook</string>
    <string name="recipe_from_cd">Công thức từ cộng đồng</string>
    <string name="top_user">Top thành viên</string>
    <string name="recipe_by">Công thức bởi: </string>
    <string name="post_dish">Đăng món ăn</string>
    <string name="food_name">Tên món ăn</string>
    <string name="description">Mô tả ngắn gọn</string>
    <string name="enter_ingredients">Nhập nguyên liệu</string>
    <string name="making">Cách làm</string>
    <string name="post">Đăng bài</string>
    <string name="account">Tài khoản</string>
    <string name="info">Thông tin</string>
    <string name="change_avatar">Đổi ảnh đại diện</string>
    <string name="change_name_user">Đổi tên người dùng</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="active">Hoạt Động</string>
    <string name="posted">Các bài đã đăng</string>
    <string name="log_out">Đăng xuất</string>
    <string name="save">Lưu</string>
    <string name="material">Nguyên liệu</string>
    <string name="comment">Bình luận</string>
    <string name="enter_email">Nhập email của bạn</string>
    <string name="send_email">Gửi mật khẩu mới về gmail</string>
    <string name="change_new_password">Đổi mật khẩu mới</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Nhập lại mật khẩu mới</string>
    <string name="language">Ngôn ngữ</string>
    <string name="like"> người thích</string>
    <string name="viewers"> người xem</string>
    <string name="recipe">Công thức</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="change_password_fail">Đổi mật khẩu thất bại</string>
    <string name="loadding">Vui lòng chờ trong giây lát . . .</string>
    <string name="email_test">Kiểm tra gmail của bạn</string>
    <string name="account_fail">Tài khoản không tồn tại</string>
    <string name="enter_food_name">Mời nhập tên món ăn!</string>
    <string name="enter_food_description">Mời nhập mô tả ngắn về món ăn!</string>
    <string name="enter_material">Mời nhập nguyên liệu món ăn!!</string>
    <string name="enter_make">Mời nhập cách làm</string>
    <string name="choose_image">Vui lòng chọn ảnh món ăn!</string>
    <string name="post_success">Đăng thành công!</string>
    <string name="fail_connect">Lỗi mạng!</string>
    <string name="good_morning">Chào buổi sáng</string>
    <string name="good_afternoon">Chào buổi chiều</string>
    <string name="good_evening">Chào buổi tối</string>
    <string name="good_night">Chúc ngủ ngon</string>
    <string name="change_name_success">Tên được đổi thành công! </string>
    <string name="update_success">Cập nhật thành công </string>
    <string name="update_fail">Cập nhật thất bại</string>
    <string name="are_u_sure">Bạn chắc chắn chứ?</string>
    <string name="do_u_want_delete">Bạn muốn xóa món ăn của mình?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="enter_new_email">Mời nhập email</string>
    <string name="enter_format_email">Mời nhập đúng email</string>
    <string name="check_password">Mật khẩu phải nhiều hơn 6 kí tự</string>
    <string name="enter_password">Mời nhập mật khẩu</string>
    <string name="loadding_login">Đang đang nhập . . .</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="check_user_and_pass">Tài khoản hoặc mật khẩu sai.</string>
    <string name="password_fail">Mật khẩu không khớp</string>
    <string name="check_format_account">Tài khoản phải ở định dạng email</string>
    <string name="create_account_success">Tạo tài khoản thành công</string>
    <string name="create_account_fail">Tạo tài khoản thất bại </string>
    <string name="home">Trang chủ </string>
    <string name="english">Tiếng Anh</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="enter_new_name">Nhập tên mới của bạn</string>
    <string name="cancel">Đóng</string>
    <string name="dish_love">Món ăn được yêu thích nhiều nhất</string>
    <string name="diversity">Đa dạng</string>
    <string name="share">Sẻ chia</string>
    <string name="description1">Tìm thức ăn và công thức dễ dàng hơn</string>
    <string name="description2">Cung cấp hiểu biết về nấu ăn, dinh dưỡng từ cộng đồng</string>
    <string name="description3">Chia sẻ món ăn của bạn tới cộng đồng</string>
    <string name="next">Tiếp</string>
    <string name="get_started">Bắt đầu</string>
    <string name="skip">Bỏ qua</string>
    <string name="exit">Ấn lần nữa để thoát</string>
    <string name="app_ver">App ver 1.0 by DungLt2k</string>
    <string name="add_step">Thêm bước làm</string>

</resources>
