<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
 >

    <Button
        android:id="@+id/bachchangepass"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_back"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView3"
        style="@style/viewParent.headerText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="7dp"
        android:text="@string/change_new_password" />

    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/ll"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/mkcu"

            android:paddingLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/old_password"
            android:background="@drawable/shape2"
            />

        <EditText
            android:id="@+id/mkmoi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape2"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/mkmoi2"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:background="@drawable/shape2"
            />

        <Button
            android:id="@+id/changepassbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape4"
            android:text="@string/change_new_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>



</RelativeLayout>