<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Forgotpass"
    android:background="#ffffff"
    >
    <Button
        android:id="@+id/bachquenmk"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_back"
        android:src="@drawable/ic_back" />
    <TextView
        android:id="@+id/textView3"
        style="@style/viewParent.headerText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="7dp"
        android:text="@string/forgot_password" />
    <EditText
        android:id="@+id/emailforgot"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:inputType="textPersonName"
        android:layout_height="50dp"
        android:background="@drawable/shape2"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:padding="5dp"

         />

    <Button
        android:id="@+id/send"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailforgot"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape4"
        android:textColor="@color/white"
        android:text="@string/send_email"
        android:textSize="18dp"
        />
</RelativeLayout>